--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,23 @@ a {
 * {
   box-sizing: border-box;
 }
+
+img {
+  object-fit: cover;
+  
+}
+
+/*-----------------Loading----------*/
+@import url('./loading.css'); 
+
+
+/*-----------------Products----------*/ 
+@import url('./product.css');
+
+/*-----------------Profile----------*/ 
+@import url('./profile.css');
+
+
+/*-------Products_menager------*/
+
+@import url('./products_menager.css');
